# redis-feast-gcp

./: .dockerignore  .env  .env.template  .gitignore  00-feature-store-intro.ipynb  01-triton-model-training.ipynb  02-feature-drift.ipynb  03-triton-vertex-inference-example.ipynb  Dockerfile  Makefile  README.md  build.sh  changelog.txt  cloudbuild.yaml  docker-compose.yaml  feature_store.ipynb  setup.cfg
docker/: Dockerfile.base  Dockerfile.jupyter  Dockerfile.setup  Dockerfile.triton
docker/setup/: .gcloudignore  FF__setup.sh  FF_apply.py  FF_create.py  FF_teardown.py  FF_teardown.sh  create.py  requirements.txt  setup.sh
docker/triton/: README.md  entrypoint.sh
feature_store/: README.md  apply.py  feature_store_setup.ipynb  materialize.py  requirements.txt  teardown.py
feature_store/feature_repo/: config.py  feature_store.yaml  features.py
feature_store/materialization/: deploy.sh  schedule.sh  test.sh
feature_store/repo/: .feastignore  FF_0_config.py  FF_1_providers.py  FF_4_transformations.py  FF_5_registering_sets.py  FF_6_data_fetch.py  config.py  features.py  test.py
feature_store/serve/: vaccine_demand.py
feature_store/train/: main.py  vaccine_demand.py
feature_store/utils/: FF_storage.py  __init__.py  data_fetcher.py  file.py  logger.py  model_repo.py  redis_model_repo.py  storage.py  triton_model_repo.py
jupyter/: Dockerfile  requirements.txt
re-gcp-mp/: main.tf  outputs.tf
scripts/: apply.sh  env.sh
serve/: Dockerfile  main.py
setup/: .gcloudignore  Dockerfile  apply.py  create.py  deploy.sh  environment.yml  materialize.py  setup.sh  teardown.sh  upload.sh
setup/models/ensemble/: config.pbtxt
setup/models/ensemble-model/: config.pbtxt
setup/models/preprocess/: config.pbtxt
setup/models/vaccine-predictor/: config.pbtxt
teardown/: Dockerfile  requirements.txt  teardown.py  teardown.sh
train/: Dockerfile  main.py  requirements.txt
triton/: Dockerfile  README.md
(+6 files in other folders)
