[metadata]
name = feature_store
version=0.0.1
description = End to end demo fo Feast deployed on GCP with Redis.
long_description = file: README.md
long_description_content_type=text/markdown

url = https://github.com/RedisVentures/gcp-feast-demo
project_urls =
    Source = https://github.com/RedisVentures/gcp-feast-demo

author = Tyler Hutcherson
author_email = tyler.hutcherson@redis.com
contact = Tyler Hutcherson
contact_email = tyler.hutcherson@redis.com
license = MIT
keywords = redis, feast, ai, machine learning, feature store, gcp
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
setup_requires =
    setuptools>=39.2
include_package_data = True
python_requires = >=3.7
install_requires =
    requests
    pandas
    ipython
    numpy
    feast[gcp, redis]
    google-cloud-bigquery
    google-cloud-storage
